@@ -1,7 +1,6 @@
 #!/bin/bash
 SITE=${SITE:-$(omd sites --bare | head -n 1)}
 C=$(sudo cp --preserve=mode -rv * /omd/sites/$SITE/share/check_mk/web/ | wc -l)
-#C=$(sudo cp --preserve=mode -rv htdocs/*.{css,py} /omd/versions/default/share/check_mk/web/htdocs/ | wc -l)
 echo "$C files copied"
 if [ "$SITE" != - ] ; then
     sudo omd restart $SITE apache
